--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -126,7 +126,7 @@
 						<div class="business-card-customer">
 							<a href="#">
 								<strong class="title-medium">김성민</strong>
-								<div class="company">
+								<div class="divide-list mb8">
 									<span>디지털공통개발부 UI/UX팀</span>
 									<div class="division h12 mx8"></div>
 									<span>과장</span>
@@ -152,7 +152,7 @@
 						<div class="business-card-customer">
 							<a href="#">
 								<strong class="title-medium">이름</strong>
-								<div class="company">
+								<div class="divide-list mb8">
 									<span>부서명</span>
 									<div class="division h12 mx8"></div>
 									<span>직책</span>
@@ -177,7 +177,7 @@
 						<div class="business-card-customer">
 							<a href="#">
 								<strong class="title-medium">이름</strong>
-								<div class="company">
+								<div class="divide-list mb8">
 									<span>부서명</span>
 									<div class="division h12 mx8"></div>
 									<span>직책</span>
