--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -104,9 +104,129 @@
 					</div>
 					<!-- //upload-picture -->
 
+					<!-- business-card-info -->
+					<div class="business-card-info mt40">
+						<div class="info-title">
+							<div class="info-name">
+								<div class="info-thumb">
+									<picture>
+										<source srcset="../../assets/images/ico/ico_profile.svg">
+										<img src="../../assets/images/ico/ico_profile.svg" alt="">
+									</picture>
+									<strong class="headline-small">나고객</strong>
+								</div>
+								<div class="tags tags-medium tags-lightBlue">키맨</div>
+							</div>
+							<div class="info-company">
+								<span>부서명</span>
+								<div class="division h12 mx8"></div>
+								<span>직책</span>
+							</div>
+						</div>
+						<div class="info-detail-list mt24">
+							<div class="info-table">
+								<div class="info-body">
+									<div class="info-row">
+										<div class="info-th">회사</div>
+										<div class="info-td">
+											<div class="group gap10 py0">
+												회사이름
+												<a href="#" class="anchor chevron fs-14">기업조회</a>
+											</div>
+										</div>
+									</div>
+									<div class="info-row">
+										<div class="info-th">휴대폰</div>
+										<div class="info-td">010-****-5736</div>
+									</div>
+									<div class="info-row">
+										<div class="info-th">이메일</div>
+										<div class="info-td">**c@a**.com</div>
+									</div>
+									<div class="info-row">
+										<div class="info-th">전화번호</div>
+										<div class="info-td">02-****-5678</div>
+									</div>
+									<div class="info-row">
+										<div class="info-th">팩스번호</div>
+										<div class="info-td">02-****-4321</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+					<!-- //business-card-info -->
+
+					<div class="stroke my40"></div>
+
+
+					<!-- group -->
+					<div class="group py0 px4">
+						<strong class="title-large">등록/만료 정보</strong>
+						<a href="#" class="anchor chevron fs-14">변경 내역</a>
+					</div>
+					<!-- group -->
+
+					<div class="info-detail-list pb32">
+						<div class="info-table">
+							<div class="info-body">
+								<div class="info-row">
+									<div class="info-th">등록자</div>
+									<div class="info-td">
+										나우리
+										<div class="divide-list mt4">
+											<span>부서명</span>
+											<div class="division h12 mx8"></div>
+											<span>직책</span>
+										</div>
+									</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">공유일</div>
+									<div class="info-td">2024-11-22</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">최종수정자</div>
+									<div class="info-td">
+										나은행
+										<div class="divide-list mt4">
+											<span>부서명</span>
+											<div class="division h12 mx8"></div>
+											<span>직책</span>
+										</div>
+									</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">최종수정일</div>
+									<div class="info-td">2024-11-22</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">만료일</div>
+									<div class="info-td">
+										<div class="group gap8 py0 j-start flex-wrap">
+											<div>2024-11-22</div>
+											<div class="tags tags-small tags-lightRed">삭제예정</div>
+											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="btn-wrap">
+						<button type="button" class="btn-large btn-outlined">삭제</button>
+						<button type="button" class="btn-large btn-primary">수정</button>
+					</div>
 
 				</div>
 				<!-- //content -->
+
+
+
+
 			</div>
 			<!-- //container -->
 
@@ -118,9 +238,39 @@
 
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
-			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-outlined">삭제</button>
-				<button type="button" class="btn-large btn-primary">수정</button>
+			<div class="info-anchor">
+				<ul>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-phone bg-icon bg-status-active"></i>
+							<span>휴대폰</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-sms bg-icon bg-status-active"></i>
+							<span>문자</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-mail bg-icon bg-status-active"></i>
+							<span>이메일</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-call bg-icon bg-status-active"></i>
+							<span>회사전화</span>
+						</button>
+					</li>
+					<li>
+						<button type="button">
+							<i class="icon-only icon-36 icon-memo bg-icon bg-status-active"></i>
+							<span>메모 </span>
+						</button>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
