--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -437,7 +437,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" title="별칭" placeholder="별칭">
+										<input type="text" title="별칭" placeholder="예) 자주쓰는 명함, OO고객 전용">
 									</div>
 									<p class="validate-text"></p>
 								</div>
