--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -211,6 +211,16 @@
 										</div>
 									</div>
 								</div>
+								<div class="info-row">
+									<div class="info-th">만료일</div>
+									<div class="info-td">
+										<div class="group gap8 py0 j-start flex-wrap">
+											<div>2024-11-22</div>
+											<div class="tags tags-small tags-lightBlue">D-30</div>
+											<button type="button" class="btn-small btn-outlined btn-round">연장</button>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
