--- a/html/index.html
+++ b/html/index.html
@@ -209,6 +209,16 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Privacy</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_privacy</a></td>
+						<td></td>
+					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Tab</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_tab</a></td>
 						<td></td>
@@ -222,6 +232,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_tag</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Term</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_term</a></td>
+						<td></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
