--- a/html/index.html
+++ b/html/index.html
@@ -520,6 +520,25 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWLO01002_04</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>서비스 이용 동의</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWLO010003</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>완료</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWLO020003</a></td>
+						<td></td>
+					</tr>
+
 				</tbody>
 
 
