--- a/html/PBWLO/PBWLO020003.html
+++ b/html/PBWLO/PBWLO020003.html
@@ -60,7 +60,7 @@
 	<script src="../../assets/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
 	<style>
-		body {
+		main {
 			background-color: var(--background-bg_lightGray);
 		}
 	</style>
