--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -88,15 +88,16 @@
 
 			<!-- container -->
 			<div id="container">
-				<!-- group -->
-				<div class="group py0">
-					<div class="right">
-						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
-					</div>
-				</div>
-				<!-- //group -->
 				<!-- content -->
 				<div class="content">
+
+					<!-- group -->
+					<div class="group group-fluid py0">
+						<div class="right">
+							<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
+						</div>
+					</div>
+					<!-- //group -->
 
 					<!-- group -->
 					<div class="group">
