--- a/html/PBWLO/PBWLO010003.html
+++ b/html/PBWLO/PBWLO010003.html
@@ -92,27 +92,29 @@
 				<!-- content -->
 				<div class="content">
 
-					<div class="inp-check-all mt40">
-						<div class="inp inp-small">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">전체 동의</span>
-							</label>
+					<div class="inp-check-all-wrap mt40">
+						<div class="inp-check-all">
+							<div class="inp inp-small">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">전체 동의</span>
+								</label>
+							</div>
 						</div>
-					</div>
-					<div class="inp-column-list mt8">
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">서비스 이용 약관</span>
-							</label>
-						</div>
-						<div class="stroke my16"></div>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">App-Push 이용 동의</span>
-							</label>
+						<div class="inp-column-list mt8">
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">서비스 이용 약관</span>
+								</label>
+							</div>
+							<div class="stroke my16"></div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox">
+									<span class="label-title">App-Push 이용 동의</span>
+								</label>
+							</div>
 						</div>
 					</div>
 
