--- a/html/index.html
+++ b/html/index.html
@@ -96,6 +96,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_badge</a></td>
 						<td></td>
 					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Business Card</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_business_card</a></td>
+						<td></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
