--- a/html/PBWBU/PBWBU000001_nodata.html
+++ b/html/PBWBU/PBWBU000001_nodata.html
@@ -131,7 +131,7 @@
 
 	<script>
 		$(document).ready(function() {
-			toastr.warning('', '내 명함을 먼저 등록하고 공유 해주세요.', {
+			toastr.caution('', '내 명함을 먼저 등록하고 공유 해주세요.', {
 				"timeOut": 0,
 				"extendedTimeOut": 0,
 				"preventDuplicates": true,
