--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -113,7 +113,7 @@
 								<i class="badge ml0">3</i>
 							</span>
 							<span class="division mx8"></span>
-							<span class="sort">최신순</button>
+							<span class="sort">최신순</span>
 						</button>
 						<!-- sort-list -->
 
@@ -142,8 +142,8 @@
 								<div class="thumb thumb-nodata">
 									<!-- <button type="button" class="btn-small btn-black btn-round">연장하기</button> -->
 									<picture>
-										<source srcset="">
-										<img src="" alt="">
+										<source srcset="../../resources/images/PBWBU/ico_business_card_empty.svg">
+										<img src="../../resources/images/PBWBU/ico_business_card_empty.svg" alt="">
 									</picture>
 								</div>
 							</figure>
