--- a/html/plugins/sweetalert2.html
+++ b/html/plugins/sweetalert2.html
@@ -71,7 +71,7 @@
 			confirmButtonText: '확인',
 			cancelButtonText: '취소',
 			customClass: {
-				cancelButton: "btn-large btn-secondary",
+				cancelButton: "btn-large btn-outlined",
 				confirmButton: "btn-large btn-primary",
 			},
 			buttonsStyling: false
