--- a/html/plugins/toastr.html
+++ b/html/plugins/toastr.html
@@ -170,7 +170,7 @@
 			toastr.error('You clicked Error Toast')
 		});
 		$('#warning').click(function(event) {
-			toastr.warning('You clicked Warning Toast')
+			toastr.caution('You clicked Warning Toast')
 		});
 
 		// Toast Image and Progress Bar
