--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -92,19 +92,19 @@
 				<div class="content">
 
 					<!-- group -->
-					<div class="group group-fluid py0 pr16">
+					<div class="group group-fluid p16">
 						<div class="right">
-							<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
+							<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 						</div>
 					</div>
 					<!-- //group -->
 
+					<div class="stroke stroke-fluid my0"></div>
+
 					<!-- group -->
-					<div class="group pt24">
+					<div class="group pt24 px4">
 						<strong class="title-medium">별칭명</strong>
-						<div class="btn-wrap p0">
-							<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
-						</div>
+						<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
 					</div>
 					<!-- //group -->
 
@@ -187,12 +187,12 @@
 					</div>
 					<!-- //bs-card-wrap -->
 
+					<div class="stroke stroke-fluid my0"></div>
+
 					<!-- group -->
-					<div class="group pt24">
+					<div class="group pt24 px4">
 						<strong class="title-medium">별칭명</strong>
-						<div class="btn-wrap p0">
-							<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
-						</div>
+						<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
 					</div>
 					<!-- //group -->
 
@@ -289,7 +289,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-outlined" id="modalTrigger">등록</button>
+				<button type="button" class="btn-large btn-outlined" data-micromodal-trigger="modal-businesscard-regist">등록</button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i>공유</button>
 			</div>
 		</div>
@@ -707,6 +707,7 @@
 											<div class="card-select">
 												<div class="inp inp-large">
 													<span class="tags tags-medium tags-black-80">위비프렌즈 타입</span>
+													<!-- 화면에 표시되는 input은 추후 숨길 예정, 개발 작업 시 swiper-slide-active slide 안 input에 checked 시키게끔 작업 부탁드립니다. -->
 													<label><input type="radio" name="rad001"></label>
 													<!-- bs-card-wrap -->
 													<div class="bs-card-wrap">
@@ -1069,8 +1070,8 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-outlined">삭제</button>
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-outlined" onclick="$swal.fire02('삭제하시겠습니까', 'caution', '예',  true, '아니요');">삭제</button>
+							<button type=" button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -1113,40 +1114,12 @@
 		sortableLeft = Sortable.create(sortingBusinessCard, sortableOption);
 
 		// swiper
-		let swiperInit = false;
-		let swiperCheckedIndex = '';
-		let newSwiper = '';
-		let awaitAnimationTime = 300
 
 
-		function modalCardSwiper() {
-			newSwiper = new Swiper('.swiper-business-card', {
-				spaceBetween: 8,
-				slidesPerView: 1.07,
-			});
-			swiperInit = true;
-		}
-
-		const modalTrigger = document.querySelector('#modalTrigger')
-		modalTrigger.addEventListener("click", function() {
-			MicroModal.show('modal-businesscard-regist', {
-				// openTrigger: 'data-custom-open', // [3]
-				// closeTrigger: 'data-custom-close', // [4]
-				// openClass: 'is-open', // [5]
-				disableScroll: true, // [6]
-				disableFocus: true, // [7]
-				awaitOpenAnimation: true, // [8]
-				awaitCloseAnimation: true, // [9]
-				// debugMode: true // [10]
-				onShow: function(modal) {
-					if (swiperInit === false) {
-						modalCardSwiper()
-					}
-				},
-				onClose: function(modal) {
-
-				}
-			});
+		const newSwiper = new Swiper('.swiper-business-card', {
+			spaceBetween: 1,
+			effect: 'cards',
+			observer: true,
 		});
 	</script>
 
