--- a/html/PBWBU/PBWBU010001_modify.html
+++ b/html/PBWBU/PBWBU010001_modify.html
@@ -124,7 +124,7 @@
 					<!-- business-card-customer -->
 					<div class="business-card-customer-list">
 						<div class="business-card-customer">
-							<a href="#">
+							<button data-micromodal-trigger="modal-businesscard-customer-modify">
 								<strong class="title-medium">김성민</strong>
 								<div class="divide-list">
 									<span>디지털공통개발부 UI/UX팀</span>
@@ -133,7 +133,7 @@
 								</div>
 								<div class="company-name">파인너츠</div>
 								<div class="tags tags-small tags-lightBlue">키맨</div>
-							</a>
+							</button>
 							<figure>
 								<div class="due-date">
 									<strong class="body-small">만료일</strong>
@@ -150,7 +150,7 @@
 						</div>
 
 						<div class="business-card-customer">
-							<a href="#">
+							<button>
 								<strong class="title-medium">이름</strong>
 								<div class="divide-list">
 									<span>부서명</span>
@@ -158,7 +158,7 @@
 									<span>직책</span>
 								</div>
 								<div class="company-name">회사명</div>
-							</a>
+							</button>
 							<figure>
 								<div class="due-date">
 									<strong class="body-small">만료일</strong>
@@ -175,7 +175,7 @@
 						</div>
 
 						<div class="business-card-customer">
-							<a href="#">
+							<button>
 								<strong class="title-medium">이름</strong>
 								<div class="divide-list">
 									<span>부서명</span>
@@ -183,7 +183,7 @@
 									<span>직책</span>
 								</div>
 								<div class="company-name">회사명</div>
-							</a>
+							</button>
 							<figure>
 								<div class="due-date">
 									<div class="tags tags-small tags-lightRed">삭제예정</div>
@@ -215,7 +215,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-businesscard-customer-regist"><i class="ico-add"></i>고객 명함 등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>고객 명함 등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -269,12 +269,12 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard-customer-regist" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard-customer-modify" aria-hidden="true">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
 				<div class="modal__header">
-					<strong class="modal__title title-large">고객 명함 등록 </strong>
+					<strong class="modal__title title-large">고객 명함 관리</strong>
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
@@ -491,22 +491,6 @@
 						</div>
 						<!-- //group-form -->
 
-						<!-- group-form -->
-						<div class="group-form mt40">
-							<div class="group-title">
-								<strong class="title-medium">메모</strong>
-							</div>
-							<div class="group-content">
-								<div class="form">
-									<div class="input-wrap">
-										<textarea title="메모"></textarea>
-									</div>
-									<div class="textarea-length">0/300자</div>
-								</div>
-							</div>
-						</div>
-						<!-- //group-form -->
-
 						<p class="description error body-small mt40">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 
 					</div>
@@ -528,6 +512,10 @@
 
 
 	<script>
+		setTimeout(function() {
+			$("[data-micromodal-trigger=modal-businesscard-customer-modify]").trigger('click')
+		}, 300)
+
 		function swalFire() {
 			Swal.fire({
 				showCloseButton: true,
