--- a/html/index.html
+++ b/html/index.html
@@ -487,6 +487,16 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td></td>
+						<td>수정</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify</a></td>
+						<td></td>
+					</tr>
+                    
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>상세</td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001</a></td>
