--- a/html/plugins/select2.html
+++ b/html/plugins/select2.html
@@ -5,7 +5,7 @@
 	<title>신한투자증권프로젝트메타</title>
 	<meta charset="UTF-8">
 	<title>select2</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="../../resources/plugins/select2/4.0.13/css/select2.min.css">
 </head>
 
