--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>😀INDEX😀</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
 
 	<script src="../resources/plugins/jquery/jquery.min.js"></script>
 
@@ -492,7 +492,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify</a></td>
 						<td></td>
 					</tr>
-                    
+
 					<tr>
 						<td></td>
 						<td></td>
