--- a/html/plugins/highlight.html
+++ b/html/plugins/highlight.html
@@ -6,7 +6,7 @@ sv
 <head>
 	<title>신한투자증권프로젝트메타</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0, user-scalable=no">
 
 	<script src="../../resources/plugins/jquery/jquery.min.js"></script>
 
