--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -124,16 +124,16 @@
 					<!-- business-card-customer -->
 					<div class="business-card-customer-list">
 						<div class="business-card-customer">
-							<a href="#">
+							<button>
 								<strong class="title-medium">김성민</strong>
-								<div class="divide-list">
+								<span class="divide-list">
 									<span>디지털공통개발부 UI/UX팀</span>
-									<div class="division h12 mx8"></div>
+									<span class="division h12 mx8"></span>
 									<span>과장</span>
-								</div>
-								<div class="company-name">파인너츠</div>
-								<div class="tags tags-small tags-lightBlue">키맨</div>
-							</a>
+								</span>
+								<span class="company-name">파인너츠</span>
+								<span class="tags tags-small tags-lightBlue">키맨</span>
+							</button>
 							<figure>
 								<div class="due-date">
 									<strong class="body-small">만료일</strong>
@@ -150,15 +150,15 @@
 						</div>
 
 						<div class="business-card-customer">
-							<a href="#">
+							<button>
 								<strong class="title-medium">이름</strong>
-								<div class="divide-list">
+								<span class="divide-list">
 									<span>부서명</span>
-									<div class="division h12 mx8"></div>
+									<span class="division h12 mx8"></span>
 									<span>직책</span>
-								</div>
-								<div class="company-name">회사명</div>
-							</a>
+								</span>
+								<span class="company-name">회사명</span>
+							</button>
 							<figure>
 								<div class="due-date">
 									<strong class="body-small">만료일</strong>
@@ -175,15 +175,15 @@
 						</div>
 
 						<div class="business-card-customer">
-							<a href="#">
+							<button>
 								<strong class="title-medium">이름</strong>
-								<div class="divide-list">
+								<span class="divide-list">
 									<span>부서명</span>
-									<div class="division h12 mx8"></div>
+									<span class="division h12 mx8"></span>
 									<span>직책</span>
-								</div>
-								<div class="company-name">회사명</div>
-							</a>
+								</span>
+								<span class="company-name">회사명</span>
+							</button>
 							<figure>
 								<div class="due-date">
 									<div class="tags tags-small tags-lightRed">삭제예정</div>
