--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -115,9 +115,12 @@
 									</picture>
 									<strong class="headline-small">나고객</strong>
 								</div>
-								<div class="tags tags-medium tags-lightBlue">키맨</div>
+								<div class="tags-wrap">
+                                    <div class="tags tags-medium tags-lightBlue">키맨</div>
+                                    <div class="tags tags-medium tags-lightBlue">키맨</div>
+                                </div>
 							</div>
-							<div class="info-company">
+							<div class="divide-list mt16 px4">
 								<span>부서명</span>
 								<div class="division h12 mx8"></div>
 								<span>직책</span>
@@ -158,7 +161,75 @@
 					</div>
 					<!-- //business-card-info -->
 
-					<div class="stroke my40"></div>
+
+
+					<!-- group -->
+					<div class="group py0 px4 mt24">
+						<strong class="title-large">메모</strong>
+					</div>
+					<!-- group -->
+
+
+					<!-- memo-list -->
+					<div class="memo-list mt8">
+						<div class="memo-inner" data-toggle="toggle-wrap">
+							<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+							<div class="memo-btn">
+								<div class="left">
+									<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+									<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+								</div>
+								<div class="right">
+									<button type="button" class="anchor chevron chevron-down fs-13" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+										<span class="toggle-off">더보기</span>
+										<span class="toggle-on">접기</span>
+									</button>
+								</div>
+							</div>
+							<dl>
+								<dt>작성자이름</dt>
+								<dd>2024-11-06 10:48</dd>
+							</dl>
+							<div class="divide-list">
+								<span>부서명</span>
+								<div class="division h12 mx8"></div>
+								<span>부서명</span>
+							</div>
+						</div>
+						<div class="memo-inner" data-toggle="toggle-wrap">
+							<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+							<div class="memo-btn">
+								<div class="left">
+									<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+									<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+								</div>
+								<div class="right">
+									<button type="button" class="anchor chevron chevron-down fs-13" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+										<span class="toggle-off">더보기</span>
+										<span class="toggle-on">접기</span>
+									</button>
+								</div>
+							</div>
+							<dl>
+								<dt>작성자이름</dt>
+								<dd>2024-11-06 10:48</dd>
+							</dl>
+							<div class="divide-list">
+								<span>부서명</span>
+								<div class="division h12 mx8"></div>
+								<span>부서명</span>
+							</div>
+						</div>
+					</div>
+					<!-- //memo-list -->
+
+
+					<div class="btn-wrap mt8">
+						<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
+					</div>
+
+
+					<div class="stroke my24"></div>
 
 
 					<!-- group -->
@@ -168,7 +239,7 @@
 					</div>
 					<!-- group -->
 
-					<div class="info-detail-list pb32">
+					<div class="info-detail-list mt10 pb32">
 						<div class="info-table">
 							<div class="info-body">
 								<div class="info-row">
