--- a/html/PBWLO/PBWLO01002_02.html
+++ b/html/PBWLO/PBWLO01002_02.html
@@ -103,11 +103,11 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap">
-										<button type="button" class="btn-large btn-primary"><i class="ico-refresh"></i><span>다시 시도</span></button>
+									<div class="btn-wrap py24">
+										<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-refresh"></i><span>다시 시도</span></button>
 									</div>
 
-									<div class="d-flex j-center mt24">
+									<div class="btn-wrap p0">
 										<a href="#" class="anchor underline fs-13">로그인 재설정</a>
 									</div>
 
