--- a/html/PBWLO/PBWLO01002_03.html
+++ b/html/PBWLO/PBWLO01002_03.html
@@ -107,11 +107,11 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap">
+									<div class="btn-wrap my24">
 										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
 									</div>
 
-									<div class="d-flex j-center mt24">
+									<div class="btn-wrap py0">
 										<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
 									</div>
 
