--- a/html/PBWLO/PBWLO01002_01.html
+++ b/html/PBWLO/PBWLO01002_01.html
@@ -111,11 +111,11 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap">
+									<div class="btn-wrap my24">
 										<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth"></i><span>생체인증 로그인</span></button>
 									</div>
 
-									<div class="d-flex j-center mt24">
+									<div class="btn-wrap p0">
 										<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
 									</div>
 
