--- a/html/PBWLO/PBWLO01002_04.html
+++ b/html/PBWLO/PBWLO01002_04.html
@@ -115,11 +115,11 @@
 										<p class="validate-text"></p>
 									</div>
 
-									<div class="btn-wrap">
+									<div class="btn-wrap my24">
 										<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
 									</div>
 
-									<div class="d-flex j-center mt24">
+									<div class="btn-wrap py0">
 										<a href="#" class="anchor underline fs-13">로그인 재설정</a>
 									</div>
 
