--- a/html/PBWBU/PBWBU020001.html
+++ b/html/PBWBU/PBWBU020001.html
@@ -116,9 +116,9 @@
 									<strong class="headline-small">나고객</strong>
 								</div>
 								<div class="tags-wrap">
-                                    <div class="tags tags-medium tags-lightBlue">키맨</div>
-                                    <div class="tags tags-medium tags-lightBlue">키맨</div>
-                                </div>
+									<div class="tags tags-medium tags-lightBlue">키맨</div>
+									<div class="tags tags-medium tags-lightGray">VG공유</div>
+								</div>
 							</div>
 							<div class="divide-list mt16 px4">
 								<span>부서명</span>
@@ -223,10 +223,18 @@
 					</div>
 					<!-- //memo-list -->
 
+					<p class="description caution body-large ac mt32">등록된 메모가 없습니다.</p>
 
-					<div class="btn-wrap mt8">
-						<button type="button" class="btn-small btn-outlined btn-round">RM 로그인</button>
+
+
+					<div class="btn-wrap">
+						<button type="button" class="btn-small btn-outlined btn-round">전체보기</button>
 					</div>
+
+					<div class="btn-wrap">
+						<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
+					</div>
+
 
 
 					<div class="stroke my24"></div>
