--- a/html/index.html
+++ b/html/index.html
@@ -275,6 +275,16 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Toggle</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_toggle</a></td>
+						<td></td>
+					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Typography</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_typohraphy</a></td>
 						<td></td>
