--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -92,7 +92,7 @@
 				<div class="content">
 
 					<!-- group -->
-					<div class="group group-fluid p16">
+					<div class="group content-fluid">
 						<div class="right">
 							<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 						</div>
@@ -512,7 +512,7 @@
 							<div class="group-title">
 								<strong class="title-medium">명함 스타일</strong>
 							</div>
-							<div class="group-content group-content-fluid mt8">
+							<div class="group-content content-fluid mt8 px0">
 								<div class="swiper swiper-business-card">
 									<!-- Additional required wrapper -->
 									<div class="swiper-wrapper">
