--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -296,7 +296,7 @@
 		<!-- //bottom-btn -->
 
 	</main>
-	<!-- main -->
+	<!-- //main -->
 
 	<!-- micromodal -->
 	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard" aria-hidden="true">
@@ -309,8 +309,8 @@
 				</div>
 				<div class="modal__content">
 
-					<div class="content">
-						<p class="description info body-large mx8 my24">순서를 바꿀 명함을 끌어 순서를 변경하세요.</p>
+					<div class="content px24">
+						<p class="description info body-large my24">순서를 바꿀 명함을 끌어 순서를 변경하세요.</p>
 
 						<div id="sortingBusinessCard" class="businesscard-list">
 							<div class="list-group-item">
@@ -1012,8 +1012,8 @@
 						<!-- group -->
 						<div class="group-form mt40">
 							<div class="group-title">
-								<strong class="title-medium">자격증</strong>
-								<p class="description info body-small">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p>
+								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
+								<p class="description info body-small fc-typography-caption">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p>
 							</div>
 							<div class="group-content">
 								<div class="inp-column-list">
@@ -1048,7 +1048,7 @@
 										</label>
 									</div>
 								</div>
-								<p class="description caution body-small">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
+								<p class="description caution body-small fc-typography-caption">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
 							</div>
 						</div>
 						<!-- //group -->
