--- a/html/PBWBU/PBWBU010001_nodata.html
+++ b/html/PBWBU/PBWBU010001_nodata.html
@@ -100,7 +100,7 @@
 								<source srcset="../../resources/images/PBWBU/init_business_card.svg">
 								<img src="../../resources/images/PBWBU/init_business_card.svg" alt="">
 							</picture>
-							<p class="description info body-large ac">지점에 등록된 고객 명함이 없습니다. <br> 고객 명함을 등록해 보세요.</p>
+							<p class="description caution body-large ac fc-typography-gray">지점에 등록된 고객 명함이 없습니다. <br> 고객 명함을 등록해 보세요.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
@@ -129,7 +129,7 @@
 		<!-- //bottom-btn -->
 
 	</main>
-	<!-- main -->
+	<!-- //main -->
 
 	<script>
 
