--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -221,7 +221,7 @@
 		<!-- //bottom-btn -->
 
 	</main>
-	<!-- main -->
+	<!-- //main -->
 
 	<!-- micromodal -->
 	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-select-filter">
@@ -507,7 +507,7 @@
 						</div>
 						<!-- //group-form -->
 
-						<p class="description error body-small mt40">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+						<p class="description error body-small mt40 fc-typography-caption">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 
 					</div>
 
