--- a/html/PBWBU/PBWBU020001_share.html
+++ b/html/PBWBU/PBWBU020001_share.html
@@ -117,6 +117,7 @@
 								</div>
 								<div class="tags-wrap">
 									<div class="tags tags-medium tags-lightBlue">키맨</div>
+									<div class="tags tags-medium tags-lightGray">VG공유</div>
 								</div>
 							</div>
 							<div class="divide-list mt16 px4">
@@ -223,14 +224,14 @@
 					<!-- //memo-list -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
+						<button type="button" class="btn-small btn-outlined btn-round">전체보기</button>
 					</div>
 
 					<!-- nodata-wrap -->
 					<div class="nodata-wrap mt8 py32">
 						<p class="description caution body-large ac">등록된 메모가 없습니다.</p>
 						<div class="btn-wrap pb0">
-							<button type="button" class="btn-small btn-outlined btn-round" data-micromodal-trigger="modal-memo-write"><i class="ico-memo"></i>메모 등록</button>
+							<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
 						</div>
 					</div>
 					<!-- //nodata-wrap -->
@@ -241,10 +242,51 @@
 
 					<!-- group -->
 					<div class="group py0 px4">
+						<strong class="title-large">공유 정보</strong>
+					</div>
+					<!-- group -->
+
+					<!-- info-detail-list -->
+					<div class="info-detail-list mt10 pb32">
+						<div class="info-table">
+							<div class="info-body">
+								<div class="info-row">
+									<div class="info-th">공유상태</div>
+									<div class="info-td">
+										<div class="group gap12 py0 j-start flex-wrap">
+											<div class="body-medium fw-700 fc-status-active">VG공유중</div>
+											<button type="button" class="btn-small btn-outlined btn-round">공유 해제</button>
+										</div>
+									</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">공유자</div>
+									<div class="info-td">
+										김우리
+										<div class="divide-list mt4">
+											<span>부서명</span>
+											<div class="division h12 mx8"></div>
+											<span>직책</span>
+										</div>
+									</div>
+								</div>
+								<div class="info-row">
+									<div class="info-th">공유일</div>
+									<div class="info-td">2024-11-22</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- //info-detail-list -->
+
+
+					<!-- group -->
+					<div class="group py0 px4 mt24">
 						<strong class="title-large">등록/만료 정보</strong>
 						<button type="button" class="anchor chevron fs-16" data-micromodal-trigger="modal-bscard-change-history">변경 내역</button>
 					</div>
 					<!-- group -->
+
 
 					<!-- info-detail-list -->
 					<div class="info-detail-list mt10 pb32">
@@ -305,18 +347,13 @@
 					</div>
 					<!-- //info-detail-list -->
 
-					<!-- btn-wrap -->
 					<div class="btn-wrap">
 						<button type="button" class="btn-large btn-outlined">삭제</button>
 						<button type="button" class="btn-large btn-primary">수정</button>
 					</div>
-					<!-- //btn-wrap -->
 
 				</div>
 				<!-- //content -->
-
-
-
 
 			</div>
 			<!-- //container -->
@@ -369,255 +406,6 @@
 	</main>
 	<!-- //main -->
 
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-picture-resize">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">이미지</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content content-fluid">
-						<div class="pinch-zoom-wrap">
-							<div class="pinch-zoom">
-								<picture>
-									<source srcset="../../resources/@temp/thumb_h.png">
-									<img src="../../resources/@temp/thumb_h.png" alt="">
-								</picture>
-
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-memo">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">메모</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content" style="padding-bottom:96px;">
-
-						<div class="memo-user-info">
-							<strong class="title-medium px4">나고객</strong>
-							<div class="group pt0 j-start gap8">
-								<div class="divide-list px4">
-									<span>부서명</span>
-									<div class="division h12 mx8"></div>
-									<span>직책</span>
-								</div>
-								<div class="body-medium fw-400">회사명</div>
-							</div>
-						</div>
-
-						<!-- memo-list -->
-						<div class="memo-list">
-							<div class="memo-inner is-toggled">
-								<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-								<div class="memo-btn">
-									<div class="right">
-										<button type="button" class="btn-noborder" data-micromodal-trigger="modal-memo-write"><i class="ico-modify"></i>수정</button>
-										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-									</div>
-								</div>
-								<dl>
-									<dt>작성자이름</dt>
-									<dd>2024-11-06 10:48</dd>
-								</dl>
-								<div class="divide-list">
-									<span>부서명</span>
-									<div class="division h12 mx8"></div>
-									<span>부서명</span>
-								</div>
-							</div>
-							<div class="memo-inner is-toggled">
-								<p>이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-								<div class="memo-btn">
-									<div class="right">
-										<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
-										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-									</div>
-								</div>
-								<dl>
-									<dt>작성자이름</dt>
-									<dd>2024-11-06 10:48</dd>
-								</dl>
-								<div class="divide-list">
-									<span>부서명</span>
-									<div class="division h12 mx8"></div>
-									<span>부서명</span>
-								</div>
-							</div>
-						</div>
-						<!-- //memo-list -->
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-memo-write">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header modal__header__alert">
-					<strong class="modal__title title-large">메모</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content py16">
-
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox">
-								<span class="label-title">나만보기</span>
-							</label>
-						</div>
-
-						<div class="form mt10">
-							<div class="input-wrap">
-								<textarea title="메모"></textarea>
-							</div>
-							<div class="textarea-length">
-								<div class="left">0/300자</div>
-								<div class="right">
-									<button type="button" class="btn-small btn-primary btn-round">저장</button>
-								</div>
-							</div>
-						</div>
-
-						<p class="description error body-small mt10 fc-typography-caption">개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-bscard-change-history">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">고객명함 변경 내역</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-					<div class="content" style="padding-bottom:96px;">
-
-						<div class="change-history">
-							<div class="tags tags-small tags-lightGray">변경</div>
-							<div class="body-medium">키맨 ON 변경, 이름 변경, 부서명 변경, 직책 변경, 회사 변경, 부서 변경</div>
-							<dl>
-								<dt><strong>나고객</strong> <span>2024-12-03 15:31:12</span></dt>
-								<dd><b>부서명</b> <span>회사명</span></dd>
-							</dl>
-						</div>
-
-						<div class="stroke my8"></div>
-
-						<div class="change-history">
-							<div class="tags tags-small tags-lightGray">변경</div>
-							<div class="body-medium">키맨 ON 변경, 이름 변경, 부서명 변경, 직책 변경, 회사 변경, 부서 변경</div>
-							<dl>
-								<dt><strong>나고객</strong> <span>2024-12-03 15:31:12</span></dt>
-								<dd><b>부서명</b> <span>회사명</span></dd>
-							</dl>
-						</div>
-
-						<div class="stroke my8"></div>
-
-						<div class="change-history">
-							<div class="tags tags-small tags-lightGray">변경</div>
-							<div class="body-medium">키맨 ON 변경, 이름 변경, 부서명 변경, 직책 변경, 회사 변경, 부서 변경</div>
-							<dl>
-								<dt><strong>나고객</strong> <span>2024-12-03 15:31:12</span></dt>
-								<dd><b>부서명</b> <span>회사명</span></dd>
-							</dl>
-						</div>
-
-						<div class="stroke my8"></div>
-
-						<div class="change-history">
-							<div class="tags tags-small tags-lightGray">변경</div>
-							<div class="body-medium">키맨 ON 변경, 이름 변경, 부서명 변경, 직책 변경, 회사 변경, 부서 변경</div>
-							<dl>
-								<dt><strong>나고객</strong> <span>2024-12-03 15:31:12</span></dt>
-								<dd><b>부서명</b> <span>회사명</span></dd>
-							</dl>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
-
-	<script type="text/javascript">
-		var pz = '';
-		let myElement = document.querySelector('.pinch-zoom');
-		var pzInit = false;
-
-		const modalTrigger = document.querySelector('#modalTrigger')
-		modalTrigger.addEventListener("click", function() {
-			MicroModal.show('modal-picture-resize', {
-				// openTrigger: 'data-custom-open', // [3]
-				// closeTrigger: 'data-custom-close', // [4]
-				// openClass: 'is-open', // [5]
-				disableScroll: true, // [6]
-				disableFocus: true, // [7]
-				awaitOpenAnimation: true, // [8]
-				awaitCloseAnimation: true, // [9]
-				// debugMode: true // [10]
-				onShow: function(modal) {
-					if (pzInit === false) {
-						pz = new PinchZoom.default(myElement, {
-							draggableUnzoomed: false,
-							minZoom: 1,
-							maxZoom: 2,
-							onZoomStart: function(object, event) {
-								// Do something on zoom start
-								// You can use any Pinchzoom method by calling object.method()
-							},
-							onZoomEnd: function(object, event) {
-								// Do something on zoom end
-							}
-						})
-						pzInit = true;
-					}
-					console.log('onshow');
-
-				},
-				onClose: function(modal) {
-					console.log('onclose');
-				}
-			});
-		});
-	</script>
 </body>
 
 </html>
