--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -336,7 +336,7 @@
 
 
 	</main>
-	<!-- main -->
+	<!-- //main -->
 
 	<!-- micromodal -->
 	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-filter">
