--- a/html/index.html
+++ b/html/index.html
@@ -502,7 +502,6 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_modify</a></td>
 						<td></td>
 					</tr>
-
 					<tr>
 						<td></td>
 						<td></td>
@@ -512,6 +511,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>공유명함첩</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_share</a></td>
+						<td></td>
+					</tr>
+
 				</tbody>
 				<tbody data-folder="PBWLO">
 					<tr>
